--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "object-assign": "^4.1.1",
     "offline-plugin": "^4.8.0",
     "promise-polyfill": "^6.0.2",
+    "tailwind": "^4.0.0",
     "vue-apollo": "^3.0.7"
   },
   "devDependencies": {
